[workspace]

members = [
    "crates/macros",
    "crates/order_book",
    "crates/step_sim",
    "rust"
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["zombie-einstein"]
description = "Agent based market simulation library"
readme = "README.md"
repository = "https://github.com/zombie-einstein/bourse/"
keywords = ["agent-based-model", "abm", "multi-agent", "simulation", "finance"]
categories = ["simulation", "finance", "science"]

[workspace.dependencies]
rand_xoshiro = "0.6.0"
rand = "0.8.5"
serde = { version="1.0.197", features = ["derive"] }
serde_json = "1.0.114"
divan = "0.1.14"
