[package]
name = "bourse-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Macros for bourse library"
readme = "../../README.md"
repository = "https://github.com/zombie-einstein/bourse/"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
