[package]
name = "bourse-book"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Simulated limit order book library"
readme = "../../README.md"
repository = "https://github.com/zombie-einstein/bourse/"
keywords.workspace = true
categories.workspace = true
