[package]
name = "bourse-book"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Simulated limit order book library"
readme = "../../README.md"
repository = "https://github.com/zombie-einstein/bourse/"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rand_xoshiro.workspace = true
rand.workspace = true
